# llm_doc_rag_agent

./: .env.example  .gitignore  .ragignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
configs/: default.yaml
data/eval/: questions.csv  questions_project_extended.csv
data/raw/: sample.md
docs/: demo_guide.md  project_recap.md  resume_interview.md  roadmap.md
src/llm_doc_rag_agent/: __init__.py  cli.py  config.py  schemas.py  service.py  utils.py
src/llm_doc_rag_agent/agents/: __init__.py  graph.py  llm_quality.py  quality.py
src/llm_doc_rag_agent/api/: __init__.py  app.py
src/llm_doc_rag_agent/chunking/: __init__.py  splitter.py
src/llm_doc_rag_agent/embeddings/: __init__.py  providers.py
src/llm_doc_rag_agent/evaluation/: __init__.py  ragas_runner.py  runner.py
src/llm_doc_rag_agent/generation/: __init__.py  qa.py
src/llm_doc_rag_agent/loaders/: __init__.py  local.py
src/llm_doc_rag_agent/retrieval/: __init__.py  bm25.py  dense.py  reranker.py  router.py
src/llm_doc_rag_agent/vectorstores/: __init__.py  qdrant_store.py
tests/: test_agents.py  test_chunking.py  test_config.py  test_evaluation.py  test_loader.py  test_quality_grader.py  test_retrieval.py  test_service.py  test_vectorstore.py
